--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Your awesome title
-email: your-email@domain.com
-description: "New text. Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+email: example@domain.com
+description: "Test website"
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://beckytodd.github.io"
+twitter_username: 
+github_username:  
 
 # Build settings
 markdown: kramdown
